# analytics-dashboard-backend

./: .env  .env.example  .gitignore  Dockerfile  analytics.db  app.py  flask_app.py  main.py  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements.txt  simple_main.py
app/: __init__.py  main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: analytics.py  auth.py  health.py
app/core/: config.py  security.py
app/db/: database.py
app/models/: analytics.py  dashboard.py  user.py
app/schemas/: auth.py  response.py
app/utils/: logging.py
